--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
 }
 
 form {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -238,6 +239,20 @@ form > button,
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+/* Loading */
+.Loading {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(82, 82, 82);
+  opacity: 0.7;
 }
 
 .indicator {
