Refactor: Form Design, Funcion

--- a/src/components/ResultInfo/ResultInfo.scss
+++ b/src/components/ResultInfo/ResultInfo.scss
@@ -21,7 +21,7 @@
   }
 }
 
-.result_text {
+.resultText {
   display: flex;
   flex-direction: column;
   font-size: 1.2rem;
@@ -55,7 +55,7 @@
     }
   }
 
-  .result_text {
+  .resultText {
     display: flex;
     flex-direction: column;
     align-items: center;
