--- a/src/components/Shared/Shared.scss
+++ b/src/components/Shared/Shared.scss
@@ -31,7 +31,7 @@
         width: 600px;
         text-align: left;
 
-        .header_h1 {
+        .headerH1 {
           margin: 30px 0 0 0;
           height: 55px;
           color: $accent-color;
@@ -40,7 +40,7 @@
           line-height: 4.2rem;
         }
 
-        .header_span {
+        .headeSspan {
           font-size: 1.2rem;
           font-family: RixYeoljeongdo_Regular;
         }
@@ -93,7 +93,7 @@
           width: 300px;
           text-align: center;
 
-          .header_h1 {
+          .headerH1 {
             margin-top: 0;
             height: 55px;
             color: $accent-color;
@@ -102,7 +102,7 @@
             line-height: 4.85rem;
           }
 
-          .header_span {
+          .headerSpan {
             margin-top: 0.3rem;
             font-size: 1rem;
             font-family: RixYeoljeongdo_Regular;
