--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@
   align-items: $align;
 }
 
-$main-font-color: white;
+$main-font-color: black;
 $main-outer-background-color: linear-gradient(
   90deg,
   rgba(205, 87, 156) 0%,
@@ -31,3 +31,4 @@ $accent-color: rgb(88, 215, 231);
 $secondary-color: rgb(255, 87, 171);
 $sex-jonghab-color: rgb(237, 81, 159);
 $black-color: rgb(34, 34, 34);
+$sex-toggle-color: gray;
