--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -10,7 +10,7 @@
   background-color: rgb(82, 82, 82);
   opacity: 0.7;
 
-  .loading_image {
+  .loadingImage {
     width: 5rem;
     height: 5rem;
   }
