--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,7 +14,7 @@
 }
 body {
   margin: 0;
-  color: white;
+  color: darkgray;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
