--- a/src/components/Forms/SubjectToggle.scss
+++ b/src/components/Forms/SubjectToggle.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 300px;
   height: 3.5rem;
-  border: 2px solid green;
+  border: 2px solid #26a58a;
   border-radius: 15px;
 
   .admissionToggle {
@@ -13,9 +13,8 @@
     align-items: center;
     width: 145px;
     height: 3.6rem;
-    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 14px;
-    border: 2px solid green;
+    border: 2px solid #26a58a;
     color: white;
     font-size: 2rem;
     font-weight: bold;
@@ -32,7 +31,7 @@
     margin: 15px auto !important;
     width: 248px;
     height: 54px;
-    border: 1px solid green;
+    border: 1px solid #26a58a;
     border-radius: 15px;
 
     .admissionToggle {
@@ -41,7 +40,6 @@
       align-items: center;
       width: 200px;
       height: 54px;
-      background-color: rgba(255, 255, 255, 0.448);
       color: white;
       font-size: 1.7rem;
       font-weight: bold;
