Refactor: API Body 관련, 오류 수정

--- a/src/pages/Main/Form/Form.scss
+++ b/src/pages/Main/Form/Form.scss
@@ -105,7 +105,7 @@
 
     .css-1e6y48t-MuiButtonBase-root-MuiButton-root,
     .submitButton {
-      margin: 5px auto !important;
+      margin: 5px auto 20px !important;
       padding: 10px 88px 8px !important;
       width: 180px;
       background: #26a58a !important;
