--- a/src/pages/Main/Result/Result.scss
+++ b/src/pages/Main/Result/Result.scss
@@ -8,21 +8,27 @@
   justify-content: space-between;
   align-items: center;
   margin: 5px 10px !important;
-
-  .resultButtonWrap {
+  .buttonWrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 0.5rem;
 
     .resultButton {
       background: $main-button-color !important;
       color: white !important;
       padding: 10px 0 8px !important;
       margin: 5px 10px !important;
+      border: none;
       border-radius: 0.7rem !important;
       font-size: 1.3rem !important;
       font-family: RixYeoljeongdo_Regular !important;
       width: 180px;
+      height: 56px;
+
+      &:nth-child(3) {
+        font-size: 1rem !important;
+      }
     }
   }
 }
@@ -35,21 +41,33 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: 30px;
 
-    .resultButtonWrap {
+    .buttonWrap {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      margin-top: 1rem;
+
       .resultButton {
         background: $main-button-color !important;
         color: white !important;
         padding: 10px 0 8px !important;
         margin: 5px 10px !important;
+        border: none;
         border-radius: 0.7rem !important;
-        font-size: 1.3rem !important;
+        font-size: 0.8rem !important;
         font-family: RixYeoljeongdo_Regular !important;
-        width: 180px;
+        width: 120px;
+        height: 36px;
+
+        &:nth-child(3) {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 0.7rem !important;
+        }
       }
     }
   }
