--- a/src/components/ResultInfo/ResultInfo.scss
+++ b/src/components/ResultInfo/ResultInfo.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 80%;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 2rem auto 0;
   img {
     width: 100%;
   }
@@ -26,6 +26,7 @@
   flex-direction: column;
   font-size: 1.2rem;
   font-weight: 100;
+  margin-top: 0.5rem;
   span {
     font-weight: 100;
     font-family: RixYeoljeongdo_Regular;
@@ -38,7 +39,7 @@
     position: relative;
     width: 80%;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 2rem auto 0;
     img {
       width: 100%;
     }
@@ -59,6 +60,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 2em;
     span {
       font-weight: 100;
       font-family: RixYeoljeongdo_Regular;
