--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -9,6 +9,9 @@
   overflow: hidden;
 
   .outer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: auto;
     top: 5vh;
     width: 90vw;
@@ -21,6 +24,7 @@
       flex-direction: column;
       justify-content: space-evenly;
       margin: auto;
+      width: 100%;
       height: 100%;
       background: white;
       border-radius: 1.75rem;
@@ -28,21 +32,12 @@
 
       .header {
         margin: 0 auto;
-        width: 600px;
-        text-align: left;
+        text-align: center;
 
-        .headerH1 {
-          margin: 30px 0 0 0;
-          height: 55px;
-          color: $accent-color;
-          font-family: GangwonEduPowerExtraBoldA;
-          font-size: 3rem;
-          line-height: 4.2rem;
-        }
-
-        .headerSpan {
-          font-size: 1.2rem;
-          font-family: RixYeoljeongdo_Regular;
+        .headerLogo {
+          width: 200px;
+          height: 100px;
+          margin-top: 50px;
         }
       }
     }
@@ -53,11 +48,16 @@
   .main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     background-color: $black-color;
     background: #fafafa;
 
     .outer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin: auto;
       top: 5vh;
       width: 90vw;
@@ -71,31 +71,21 @@
         justify-content: center;
         margin: auto;
         padding: 2%;
-        width: 80vw;
+        width: 100%;
         height: 45vh;
         min-height: 580px;
+        min-width: 335px;
         max-width: 320px;
         background: white;
         box-shadow: 0 0 0.5rem 0.1rem #e0e0e0;
 
         .header {
           margin: 0 auto;
-          width: 300px;
           text-align: center;
-
-          .headerH1 {
-            margin-top: 0;
-            height: 55px;
-            color: $accent-color;
-            font-family: GangwonEduPowerExtraBoldA;
-            font-size: 2.5rem;
-            line-height: 4.85rem;
-          }
-
-          .headerSpan {
-            margin-top: 0.3rem;
-            font-size: 1rem;
-            font-family: RixYeoljeongdo_Regular;
+          .headerLogo {
+            width: 160px;
+            height: 80px;
+            margin-top: 50px;
           }
         }
       }
