--- a/src/components/ResultInfo/ResultInfo.scss
+++ b/src/components/ResultInfo/ResultInfo.scss
@@ -14,7 +14,7 @@
     left: 50%;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 140px solid $accent-color;
+    border-bottom: 140px solid #26a58a;
     border-bottom-left-radius: 35%;
     border-bottom-right-radius: 35%;
     transform-origin: center bottom;
@@ -49,7 +49,7 @@
       left: 50%;
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-bottom: 90px solid $accent-color;
+      border-bottom: 90px solid #26a58a;
       border-bottom-left-radius: 35%;
       border-bottom-right-radius: 35%;
       transform-origin: center bottom;
