--- a/src/components/Forms/SubjectToggle.scss
+++ b/src/components/Forms/SubjectToggle.scss
@@ -5,15 +5,16 @@
   width: 300px;
   height: 3.5rem;
   border: 2px solid #26a58a;
-  border-radius: 18px;
+  border-radius: 15px;
 
   .admissionToggle {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
-    height: 3.5rem;
+    width: 145px;
+    height: 3.6rem;
     border-radius: 14px;
+    border: 1px solid #26a58a;
     color: white;
     font-size: 2rem;
     font-weight: bold;
