--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -68,11 +68,11 @@
       .inner {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        margin: auto;
+        justify-content: space-around;
+        align-self: center;
         padding: 2%;
         width: 100%;
-        height: 45vh;
+        height: 100%;
         min-height: 580px;
         min-width: 335px;
         max-width: 320px;
