--- a/src/pages/Main/Result/Result.scss
+++ b/src/pages/Main/Result/Result.scss
@@ -8,14 +8,15 @@
   justify-content: space-between;
   align-items: center;
   margin: 5px 10px !important;
-  .buttonWrap {
+
+  .resultButtonWrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0.5rem;
 
     .resultButton {
-      background: $main-button-color !important;
+      background: #26a58a !important;
       color: white !important;
       padding: 10px 0 8px !important;
       margin: 5px 10px !important;
@@ -35,7 +36,7 @@
 
 @media screen and (max-width: 750px) {
   .result {
-    height: 60vh;
+    height: calc(100% - 60px);
     max-height: 500px;
     display: flex;
     flex-direction: column;
@@ -43,15 +44,16 @@
     align-items: center;
     margin-top: 30px;
 
-    .buttonWrap {
+    .resultButtonWrap {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       margin-top: 1rem;
+      height: 100%;
 
       .resultButton {
-        background: $main-button-color !important;
+        background: #26a58a !important;
         color: white !important;
         padding: 10px 0 8px !important;
         margin: 5px 10px !important;
