--- a/src/components/Forms/SubjectToggle.scss
+++ b/src/components/Forms/SubjectToggle.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 296px !important;
+  width: 296px;
   height: 3.5rem;
   border: 2px solid #26a58a;
   border-radius: 15px;
@@ -11,10 +11,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc(50% - 2px);
-    height: calc(3.5rem);
-    margin-bottom: 1px;
-    border-radius: 13px;
+    width: 50%;
+    height: 3.5rem;
+    border-radius: 11px;
     border: 1px solid #26a58a;
     color: white;
     font-size: 2rem;
